# miri

./: .gitignore  LICENSE  Makefile  Package.swift  README.md  config.example.toml  project.yml  scope.md
.github/workflows/: ci.yml  community-release.yml  preview-release.yml  release.yml
App/: Info.plist  Miri.entitlements
Casks/: miri.rb.template
Sources/MiriApp/: MiriApplication.swift  SettingsViews.swift
Sources/MiriCLI/: main.swift
Sources/MiriCore/: Agent.swift  AgentIntegrations.swift  AgentSpeechFormatter.swift  BuiltinAdapters.swift  CodexAppServerAdapter.swift  CodexMCPInstaller.swift  Configuration.swift  ConfigurationStore.swift  ControlSocket.swift  ControlSocketServer.swift  DeliveryCoordinator.swift  DiagnosticsLog.swift  InteractionState.swift  (+6 more)
Worker/: README.md  pyproject.toml
Worker/models/: model-manifest.json  model-manifest.template.json
Worker/scripts/: validate_manifest.py  verify_models.py
Worker/src/miri_worker/: __init__.py  lifecycle.py  models.py  protocol.py  providers.py  real_providers.py  registry.py  service.py
Worker/tests/: test_lifecycle.py  test_models.py  test_protocol.py  test_providers.py  test_real_providers.py  test_registry.py  test_service.py
docs/: adapters.md  architecture.md  benchmarks.md  competitive-landscape.md  implementation-plan.md  installation.md  ipc.md  model-licenses.md  privacy.md  release-checklist.md  ui-roadmap.md
scripts/: benchmark.py  build-community.sh  build-preview.sh  build-release.sh  create-dmg.sh  miri-worker-launcher  notarize.sh  release-metadata.sh  sign-and-notarize.sh
(+21 files in other folders)
